<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsActivity">

    <ImageView
        android:id="@+id/imageViewIcon1"
        android:layout_width="128dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIcon1"
        app:layout_constraintVertical_bias="0.117">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textViewP1"
                android:layout_width="167dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/product_1" />

            <TextView
                android:id="@+id/textViewP2"
                android:layout_width="167dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/product_2" />

            <TextView
                android:id="@+id/textViewP3"
                android:layout_width="167dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/product_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonCartP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart" />

            <Button
                android:id="@+id/buttonCartP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart" />

            <Button
                android:id="@+id/buttonCartP3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_cart" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonAboutApp"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:text="@string/about_app"
        app:layout_constraintEnd_toEndOf="@+id/buttonGoToCart"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoToCart" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:text="@string/log_out"
        app:layout_constraintStart_toStartOf="@+id/buttonGoToCart"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoToCart" />

    <Button
        android:id="@+id/buttonGoToCart"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginBottom="152dp"
        android:text="@string/go_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>